# MeshPattern

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  document.html  setup.py  tasks.py
blender/: MeshPattern.blend  MeshPattern.blend1  MeshPatternBlender.py
docs/: index.html
docs/image/: barycentric.ai
docsource/: api.rst  conf.py  index.rst
docsource/api/: compas_x.rst
documentation/: document.html
modules/mesh_pattern/: __init__.py  cppMesh.py  hex_tessagon.py
scripts/: RunRhino.py  runRhino.py  runRhinoError.py
src/: CMakeLists.txt  MeshPattern.cpp  ShapeOpt.cpp  ShapeOpt.h  iglMesh.cpp  iglMesh.h
